<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_baseline_account_circle_24"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:id="@+id/nav_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
    </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/nav_trips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_trips_w"
                android:textSize="18sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/nav_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_wallet_w"
                android:textSize="18sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/nav_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_payment_w"
                android:textSize="18sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"/>
            <TextView
                android:id="@+id/nav_packages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_packages_w"
                android:textSize="18sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/nav_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_settings_w"
                android:textSize="18sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_marginBottom="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#555"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>