<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Settings_Activity"
    android:background="#fff">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:title="@string/toolbar_w"
        android:background="#fff"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:id="@+id/relative1"
        android:layout_marginTop="40dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            />

        <TextView
            android:id="@+id/txtname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name_w"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@id/profile_image"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/txt_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtname"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@id/profile_image"
            android:text="Mohamed"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relative1"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phone_number_w"
            android:id="@+id/txtphone"
            android:layout_marginLeft="20dp"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/txtphonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="015545321321"
            android:layout_marginTop="10dp"
            android:layout_below="@id/txtphone"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email_w"
            android:layout_below="@id/txtphonenumber"
            android:id="@+id/txtemail"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="mohamed@gmail.com"
            android:layout_marginTop="10dp"
            android:id="@+id/txt_email"
            android:layout_below="@id/txtemail"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_w"
            android:layout_below="@id/txt_email"
            android:id="@+id/txtcity"

            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:drawableRight="@drawable/ic_baseline_edit_24"
            android:text="Cairo"
            android:layout_marginTop="10dp"
            android:id="@+id/city"
            android:layout_below="@id/txtcity"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Language_w"
            android:layout_below="@id/city"
            android:id="@+id/txtlanguage"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="17sp"/>
        <Spinner
            android:id="@+id/spin_lang"
            android:layout_below="@id/txtlanguage"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:entries="@array/arr_lang"
            android:isScrollContainer="true"
            android:background="@drawable/card_back"
            android:padding="5dp"
            android:textDirection="ltr"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_edit_24"
            android:layout_toRightOf="@+id/spin_lang"
            android:layout_below="@+id/txtlanguage"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:padding="5dp"
            android:layout_marginBottom="5dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#555"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>
            <TextView
                android:id="@+id/txt_signOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sign_out_w"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:textAllCaps="false"
                />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
