<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:title="@string/toolbar_w"
                android:background="#fff"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"
                android:id="@+id/relative1"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txtname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Name_w"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:textSize="17sp" />
                    <TextView
                        android:id="@+id/txt_fname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:text="Mohamed"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        />
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Phone_number_w"
                    android:id="@+id/txtphone"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="17sp"/>
                <TextView
                    android:id="@+id/txtphonenumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="015545321321"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/txtphone"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Email_w"
                    android:id="@+id/txtemail"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="mohamed@gmail.com"
                    android:layout_marginTop="10dp"
                    android:id="@+id/txt_email"
                    android:layout_below="@id/txtemail"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city_w"
                    android:id="@+id/txtcity"

                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:drawableRight="@drawable/ic_baseline_edit_location_24"
                    android:text="@string/City_w"
                    android:layout_marginTop="10dp"
                    android:id="@+id/city"
                    android:layout_below="@id/txtcity"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Language_w"
                    android:id="@+id/txtlanguage"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_margin="20dp"
                    android:textSize="17sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/txtlanguage"
                    android:padding="10dp"
                    >
                    <Spinner
                        android:id="@+id/spin_lang"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/arr_lang"
                        android:isScrollContainer="true"
                        android:background="@drawable/card_back"
                        android:padding="5dp"
                        android:textDirection="ltr"
                        />
                    <TextView
                        android:id="@+id/selected_lang"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_edit_24"
                        android:layout_marginTop="10dp"
                        android:text="En"
                        android:textColor="#555"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_marginRight="20dp"
                        />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:padding="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#555"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>
                <TextView
                    android:id="@+id/txt_signOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sign_out_w"
                    android:textSize="20sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textAllCaps="false"
                    />
            </LinearLayout>
</LinearLayout>
    </ScrollView>

</RelativeLayout>